--- a/app.json
+++ b/app.json
@@ -23,6 +23,14 @@
     },
     "web": {
       "favicon": "./src/assets/adaptive-icon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ]
+    ]
   }
 }
