--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.8",
+    "axios": "^1.6.7",
+    "expo": "~50.0.11",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
